2005-09-12  Ray Strode  <rstrode@redhat.com>

	Remap buttons on auxillary mice for left-handed 
	mode (bug 314409).

	* gnome-settings-mouse.c  (supports_xinput_devices): new
	function to detect XInput Extension
	(configure_button_layout): new function to set up
	logical mouse button layout for left or right handed
	mode
	(xinput_device_has_buttons): new function to detect if
	an xinput device has buttons to reconfigure
	(set_xinput_devices_left_handed): new function to set
	auxillary mice into left-handed mode
	(set_left_handed): call set_xinput_devices_left_handed
	if available

2005-08-03  Sebastien Bacher  <seb128@debian.org>

	* actions/Makefile.am: fix the build without gstreamer and with alsa,
	patch by Paul Drain <pd@cipherfunk.org> (Closes: #307368).

2005-07-20  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-screensaver.c (gnome_settings_screensaver_load):
	* gnome-settings-multimedia-keys.c (do_action): try to run
	gnome-screensaver, and if that fails, run xscreensaver.

2005-07-15  Mark McLoughlin  <mark@skynet.ie>

	Change the way XKB GConf preferences are handled so that:
	  1) GConf keys are never written unless the user changes
	     the preferences
	  2) If the keys are unset, the default XKB settings are
	     used

	See bug #310513

	* gnome-settings-keyboard-xkb.c:
	(apply_xkb_settings): use the default XKB settings for
	any unset GConf keys, and only save a copy of the default
	XKB config to GConf when we're actually apply a config
	that is different from the default.
	(gnome_settings_keyboard_xkb_sysconfig_changed_response):
	If the user decides to go back to the default XKB settings,
	just unset the GConf keys.
	(gnome_settings_keyboard_xkb_analyze_sysconfig): ignore
	overrideSettings and don't save a back of the XKB defaults
	at startup.

2005-07-25  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-accessibility-keyboard.c: (warning_dialog_post):
	* gnome-settings-keyboard-xkb.c: