@@ -1,3 +1,8 @@
+2005-09-14 Ray Strode  <rstrode@redhat.com>
+
+	* gnome-settings-mouse.c: previous patch breaks the build,
+	just revert for now, bug 316142.
+
 2005-09-12  Ray Strode  <rstrode@redhat.com>
 
 	Remap buttons on auxillary mice for left-handed 
